--- a/process-analysis/sections/appendix.tex
+++ b/process-analysis/sections/appendix.tex
@@ -90,3 +90,12 @@
 	\item Must be able to evaluate and take responsibility for science and technical solutions in a societal perspective.
 	\item Must be able to generalize and reflect upon the experience with project planning and cooperation for the further study acquired during the project work
 \end{itemize}
+
+\subsection{Kanbanflow}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1\linewidth]{images/kanban.png}
+	\caption{Screenshot from online kanbanflow.}
+	\label{fig:kanban}
+\end{figure}
