--- a/process-analysis/sections/documentation.tex
+++ b/process-analysis/sections/documentation.tex
@@ -1,5 +1,11 @@
-During the first weeks of the project work, we created all signed a group contract, to ensure we all lived up to each others expectations. The supervisors also requested a contract, to work as agreement of expectations. An additional contract was then created later during project, which will be discussed during the \textit{Group Work} section.\\
-Everything that took place during our strategy meetings were noted down and added to our project wiki. Pictures of prototypes, observations or of the blackboard were all added to the facebook group, to ensure the information was accessible at all times.\\
-The testing phase was documented using a mixture of  pictures and video recordings of our different experiments.
+During the first weeks of the project work, we created all signed a group contract (appendix 8.x), to ensure we all lived up to each others expectations. The supervisors also requested a contract, to work as agreement of expectations. An additional deadline contract was then created later during project, which will be discussed during the \textit{Group Work} section.\\
+Everything that took place during our strategy meetings were noted down and added to our project wiki(appendix 8.x). Pictures of prototypes, observations or of the blackboard were all added to the Facebook group, to ensure the information was accessible at all times.\\
+For the electrical part of this project we noted down in small handbooks different setups and connection, but less on the software side.\\
+The testing phase was documented using a mixture of  pictures, screen shots and video recordings of our different experiments.
 
 \section{Discussion and Conclusion}
+
+There were not many things we changed from the previous group contract except we added few rules about the usage of new tools like kanbanflow. In this project we continued using the same documentation processing as in the P1 since it worked well before. Even thou we do not always read over the minutes meetings they are important for us to being able to access later.\\
+We decided to put much less into our Facebook page then before and upload it on the wiki, that is so things won't get lost in a overflow of information on Facebook. The idea was good but we did not follow this through and is clearly something we will work on for the next project.\\
+The use of a engineering notebook was much less in this project, the reason was that our project was much bigger in software scope then physical. Because the changes is software are much faster and done on the spot there was no reason to take them out and write them to a physical notebook. All code was uploaded frequently to out github and that keeps a good track back in time of development. For the electrical development we noted down all changes and pin-outs.\\
+The documentation of testing was done really well and planned ahead. It was a big missing part of our development in P1 and helped us in writing a good and extended testing chapter.
