--- a/process-analysis/sections/time-and-resources.tex
+++ b/process-analysis/sections/time-and-resources.tex
@@ -4,33 +4,34 @@ In order to make sure we were progressing towards each milestone in a timely man
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[scale=.4]{images/gantt1.png}
-	\caption{}
+	\includegraphics[scale=.35]{images/gantt1.png}
+	\caption{t}
 \end{figure}
 
 As we were recieving the parts we ordered we realise they wouldn't arrive in time for us to start development at the time we intended. We then reevaluated our milestones and came up with a revised gant diagram.
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[scale=.4]{images/gantt2.png}
-	\caption{}
+	\includegraphics[scale=.35]{images/gantt2.png}
+	\caption{t}
 \end{figure}
 
 We choose to use an online Kanban board for the purpose of keeping track of tasks. We separated tasks in 7 columns, each depicting a stage in the progress of the task.
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[scale=.4]{images/kanban.png}
-	\caption{}
+	\includegraphics[scale=.35]{images/kanban.png}
+	%\caption{}
 \end{figure}
 
 In the first half of the project, classes had a big effect on how we scheduled meetings and set deadlines for both the big milestones and the smaller tasks. We avoided setting deadlines right after long school days. Because our scope was very large, we often used time allocated to exercises to work on our project instead.
 
 At the end of the project, we weren't satisfied with the state of our prototypes. Because of this, although officially we ended development, we kept trying to tweak the prototype in little ways.
 
+\clearpage
 \section{Discussion and Conclusion}
 
-In terms of time and resource management, our biggest failing was our optimistic timeframe. We did not consider that the amount of time needed to learn the tools was so great. Our scope was too great, in the sense that we did not consider that we would need to spend so much time fixing errors.
+In terms of time and resource management, our biggest downfall was our optimistic timeframe. We did not take into consideration  the amount of time needed to learn the tools we used. Our scope was also too large, in the sense that we did not consider that we would need to spend so much time fixing errors.
 
 Despite our scope being too big, and us running into many more issues than we expected, we were still able to adjust our milestone deadlines, and scope, so that we could finish development with enough time for us to finish the rest of the report. Coming up with a second gantt-diagram was crucial, since if we had not done it, it would have been much harder for us to tell what we should adjust our scope to.
 
