Fixed all the stuff.

--- a/process-analysis/sections/time-and-resources.tex
+++ b/process-analysis/sections/time-and-resources.tex
@@ -5,15 +5,15 @@ In order to make sure we were progressing towards each milestone in a timely man
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=.35]{images/gantt1.png}
-	\caption{t}
+	\caption{Initial Gantt Diagram}
 \end{figure}
 
-As we were recieving the parts we ordered we realise they wouldn't arrive in time for us to start development at the time we intended. We then reevaluated our milestones and came up with a revised gant diagram.
+As we were recieving the parts we ordered we realised they would not arrive in time, for us to start development at the time we intended. We then reevaluated our milestones and came up with a revised gant diagram.
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=.35]{images/gantt2.png}
-	\caption{t}
+	\caption{Actual Gantt Diagram}
 \end{figure}
 
 We choose to use an online Kanban board for the purpose of keeping track of tasks. We separated tasks in 7 columns, each depicting a stage in the progress of the task.
@@ -21,7 +21,7 @@ We choose to use an online Kanban board for the purpose of keeping track of task
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=.35]{images/kanban.png}
-	%\caption{}
+	\caption{Our kanban board}
 \end{figure}
 
 In the first half of the project, classes had a big effect on how we scheduled meetings and set deadlines for both the big milestones and the smaller tasks. We avoided setting deadlines right after long school days. Because our scope was very large, we often used time allocated to exercises to work on our project instead.
