--- a/process-analysis/sections/methods-and-models.tex
+++ b/process-analysis/sections/methods-and-models.tex
@@ -15,7 +15,7 @@ In this chapter we are going to elaborate some academic tools we identified duri
 
 
 We used the following methods for the project.\\
-Researching played a key role throughout the entire project. After initially narrowing our scope we used preliminary research to look at different relevant topics that had valuable and theoretical information in relation to what we aimed to work with. After the final definition of our project scope we then researched further the specific information to successfully complete the project. \\
+Researching played a key role throughout the entire project. After initially narrowing our scope, we used preliminary research to look at different relevant topics that had valuable and theoretical information in relation to what we aimed to work with. After the final definition of our project scope we then researched further, to find the specific information needed to successfully complete the project. \\
 Peer-reviewing sessions took place after every major change to the report, where each group member read through the whole report separately, but not simultaneously, and gave feedback on what worked and what did not by adding comments in the~\LaTeX file or writing a note about it. This was then later discussed at a meeting and changed the sections accordingly to our notes.\\
 The blackboard in the group room was always in use for visualization for different concepts or explanations, and the board was also used to keep track of different dates and important deadlines.\\
 Prototyping was a massive part of our development phase, where we used breadboards to prototype our circuits before creating the final versions of them. 3D-modelling and printing was also used to create our enclosures for the rover.\\
