Added ALL the text

--- a/process-analysis/sections/tools-and-processes.tex
+++ b/process-analysis/sections/tools-and-processes.tex
@@ -6,7 +6,6 @@ Meetings were scheduled using an Exchange calendar, where the meetings were set 
 
 After the meeting, we posted the minute on our GitHub Wiki and also went over our backlog and added our tasks and to-dos. The GitHub Wiki served the purpose of storing meeting minutes, notes, but also our time and resource management, group contract and so on. 
 
-%deadline contract, supervisor contract
 Besides our group contract, we also wrote a supervisor contract, where we aligned our expectations with our supervisors and vice-versa. this contract has never been completely formalized. The deadline contract was something we came up with after a meeting regarding lack of motivation from certain team members on accomplishing their tasks on time. This contract stated that after a set amount of strikes, where the group member does not live up to their deadlines, we would raise the issue to our supervisors. This contract was signed by the group members, but never formalized due to an unacceptable point on the contract which was not approved by our supervisors.
 
 Communication outside of the group was done mainly on Facebook. When we could not be physically all present for our meetings, we held them over Skype.
@@ -15,8 +14,22 @@ Peer-reviewing sessions were scheduled after each major deadline, to discuss the
 
 To produce the code we used the Arduino IDE and other terminal based text editors, like \textit{nano} and \textit{vim}.
 
-To create UML diagrams, we used a tool called Visual Paradigm, that can generate all kinds of charts and diagrams based on the proper UML standard. To create flow charts and other figures, we used Google Draw, an online-based image editor and vector graphic tool.
+To create UML diagrams, we used a tool called Visual Paradigm, that can generate all kinds of charts and diagrams based on the proper UML standard. To create flow charts and other figures, we used Google Draw an Gliffy,  online-based image editor and vector graphic tool.
 
 To keep track of our workflow we used an online Kanban board, where group members encouraged each other to keep it updated with the individual user stories, tasks. Deadlines and milestones were set to ensure that we were on track, while a Gantt diagram was used to visualize this.
 
 \section{Discussion and Conclusion}
+Out of the tools named and listed above, we found Git, the version control system and GitHub, the PaaS tool to be the most useful of them all. Having a decentralised version control system has probably saved many hours of trial and error, when fixing code or writing the report. 
+
+Using the terminal text editors helped us to brush up on our Linux skills, but also due to their raw format, it was easy to work on them simultaneously. 
+
+The Exchange calendar was very useful to keep track of meetings and reminding ourselves of meeting times and we should definitely keep using it as we are right now. Formal invites should be sent out before each meeting. We did not experience any problems with Skype either, which was useful for multi-user video communication while not being physically present at the same place, at the same time. In similar future events, such tool should be used for communication.
+
+\LaTeX was also extensively used during this project. As our levels of using \LaTeX has been improved since our last project, we certainly hit less walls and experienced less problems using it, and therefore it served as a very effective tools.
+
+Our online-based Kanban board, Kanbanflow.com, was very effective in the beginning and useful to keep track of the tasks, but just as the development phase kicked in, we started spending more time together in the group room and therefore we started neglecting it, due to it being inefficient to update an online tool while all of us being physically present in the same room. The lack of push-notifications and mobile applications for the Kanban board would also have been more powerful, as of now we always need to remind ourselves to visit the website and update it. For our next project we need to reevaluate the need of an online Kanban board, and find a better alternative that might be just a to-do list application with mobile extension.
+
+
+Even though, the meeting minutes were very time consuming to write and put together, sometimes they were very useful, like in the case when someone missed a meeting and had to catch up on the tasks and meeting points. Therefore we think we should only do meeting minutes on important meetings and do not put to much resources on it when it does not seem to make sense, just because it is a meeting.
+
+The GitHub Wiki seemed to be a very good tool to use, as we stored many of the out-of-category papers and notes in there. Since our last project, we certainly started using the wiki more often, but there is still a lot of room for improvement. We still put many of the files and notes into our Facebook group. For future collaboration, we thought about structuring our wiki early on the project and force ourselves to use it more, by putting all the files in one shared space and link them on the wiki. We also used our wiki as a place where we collected links.
