Added the group contract

--- a/process-analysis/sections/appendix.tex
+++ b/process-analysis/sections/appendix.tex
@@ -91,7 +91,7 @@
 	\item Must be able to generalize and reflect upon the experience with project planning and cooperation for the further study acquired during the project work
 \end{itemize}
 
-\subsection{Kanbanflow}
+\section{Kanbanflow}
 
 \begin{figure}[H]
 	\centering
@@ -99,3 +99,51 @@
 	\caption{Screenshot from online kanbanflow.}
 	\label{fig:kanban}
 \end{figure}
+
+\clearpage
+\section{Group contract}
+
+\begin{enumerate}
+	\item Honesty is expected from everybody.
+	\item Deadlines must be communicated up front, visualized and kept in mind during the whole project period.
+	\item Postponing deadlines must be communicated at least halfway through the progress.
+	\item During each meeting, deadlines must be set and followed up on.
+	\item If the deadlines are not met, it will be brought up at the next strategy meeting.
+	\item We aim to work at our full potential and get an acceptable grade, 7.
+	\item All members take personal responsibility in achieving the learning goals, but it is expected.
+	\item We keep all communications in English.
+	\item We must notify each other when running late prior to the start of a meeting. Any notification after a meeting's start time is not taken into consideration.
+	\item Wait time for late runners is 10 minutes maximum, with reasonable motive, otherwise we carry on without the missing participant(s).
+	\item We penalize late runners or group members who do not comply with any of the following agreements:
+	\begin{itemize}
+		\item First strike: Warning + Reimbursement in form of beverages for all group members
+		\item Second strike: Serious conversation within the team
+		\item Third strike: Bringing the issue to our supervisor's attention
+	\end{itemize}
+	
+	\item Attending the report writing meetings is not compulsory, but recommended. A 12-hour notice is required in case you can not attend one of them. Sickness is excluded from this rule.
+	\item Skype calls can be used, in case a person is missing a meeting or a report writing session.
+	\item The opportunity shall be given to everybody to speak up and raise their concerns in each and every topic of discussion.
+	\item When there is a disagreement in a discussion there needs to be an underlining argument.
+	\item Leave no junk behind in the meeting rooms before leaving.
+	\item We must accept each others interests in regards of attending scheduled classes and courses.
+	\item Major problems within the group shall be solved in collaboration with the supervisor.
+	\item Everybody is expected to participate in the project with equal amount of work.
+	\item We must respect each others work methods and need for breaks (within reasonable boundaries).
+	\item The group contract needs to be reviewed by the 1st of April, 2015.
+	\item We expect the group members to take their own initiative and self-assignment when there are no delegated tasks.
+	\item We do not schedule work meetings.
+	\item In the start of the strategy meeting, we read up the agenda and announce the note-taker for the meeting.
+	\item We expect everybody to be responsible for adding their own tasks to the online Kanban board and to keep track of it.
+	\item We only move tasks to the Done column on the online Kanban board, after it has been reviewed during a strategy meeting.
+\end{enumerate}
+
+\textit{In the section below, the members of the group will sign the following statement, acknowledging the agreements above and understanding the consequences in case any of them will be broken.}
+
+\textit{Hereby, I confirm by signing this document, that I will comply to all the rules agreed in this contract. I will make sure that all the other team members does the same, and will raise awareness if I will learn about a misconduct within the group.}
+
+Signed by:
+
+@anthonymonori, @utommo, @42f87d89, @emilioamores
+
+The validity of this contract runs for the period of the P1 project, in the timeframe of 02.02.2012 - 28.06.2015
