--- a/process-analysis/sections/learning-goals.tex
+++ b/process-analysis/sections/learning-goals.tex
@@ -21,8 +21,8 @@ Getting our learning goals materialized was still hard task to do, up until we h
 
 Initially, we set our learning goals too broad, which could have backfired on us by the end of the semester, as we haven't concretized the level of understanding that we would like to achieve, and therefore could have been questioned on levels we never tried to understand. As this was pointed out to us during the status seminar, all of our learning goals were changed and made more concrete. 
 
-Setting our personal learning goals around the project seemed to be logical, but having set our learning goals first, might have saved us some time to find the right project and topic to work on. Coming up with the learning goals before concreticized our project, could help us to get a project we all have high level of interest in, formulate the project around our learning goals and not the other way around, therefore making the process more efficient. Other aspects should be taken in consideration when coming up with our learning goals, like how relevant it is to our semester learning goals and to our study.
+Setting our personal learning goals around the project seemed to be logical, but having set our learning goals first, might have saved us some time to find the right project and topic to work on. Coming up with the learning goals before concretizing our project, could help us to get a project we all have a high level of interest in, instead of formulating the project around our learning goals and not the other way around, therefore making the process more efficient. Other aspects should be taken into consideration when coming up with our learning goals, like how relevant it is to our semester learning goals and to our study.
 
-As we formulated our learning goals around a project we already set, our scope was way over our understanding and time-frame. That being said, it was also quite a new topic and one that required a large amount of research for understanding. Even without all the arising issues we had during development, we would not have had enough time to finalize our set prototype requirements and to combine our separate parts which we developed.
+As we formulated our learning goals around a project we had already set, our scope was way over our understanding and time-frame. That being said, it was also quite a new topic and one that required a large amount of research for understanding. Even without all the arising issues we had during development, we would not have had enough time to finalize our set prototype requirements and to combine our separate parts that we developed.
 
 \textit{Our personal learning goals can be found in Appendix \ref{appendix:personal-learning-goals}, while the curriculum learning goals in Appendix \ref{appendix:curriculum-learning-goals}.}
