tools and processes | method and models done

--- a/process-analysis/sections/methods-and-models.tex
+++ b/process-analysis/sections/methods-and-models.tex
@@ -1,36 +1,31 @@
-%methods:
-% - prototyping -> Breadboarding, 3dprinting, 3dmodelling,
-% - researching
-% - testing
-% - peer-reviewing
-% - blackboarding
+In the following chapter we are going to elaborate some academic tools we identified during the P2 project. We distinguish between them as methods and models. 
 
-%models:
-% - 6W
-% - sequence diagram
-% - flow charts
-% - lists
+\subsection{Methods}
+Researching played a key role throughout the entire project. After initially narrowing our scope, we used preliminary research to look at different relevant topics that had valuable and theoretical information in relation to what we aimed to work with. After the final definition of our project scope we then researched further, to find the specific information needed to successfully complete the project.
 
-In this chapter we are going to elaborate some academic tools we identified during the P2. We distinguish between them as methods and models. 
+Peer-reviewing sessions took place after every major change to the report, where each group member read through the whole report separately, but not simultaneously, and gave feedback on what worked and what did not by adding comments in the~\LaTeX ~file or writing a note about it. This was then later discussed at a meeting and changed the sections accordingly to our notes.
 
+The blackboard in the group room was always in use for visualization for different concepts or explanations, and the board was also used to keep track of different dates and important deadlines.
 
-We used the following methods for the project.\\
-Researching played a key role throughout the entire project. After initially narrowing our scope, we used preliminary research to look at different relevant topics that had valuable and theoretical information in relation to what we aimed to work with. After the final definition of our project scope we then researched further, to find the specific information needed to successfully complete the project. \\
-Peer-reviewing sessions took place after every major change to the report, where each group member read through the whole report separately, but not simultaneously, and gave feedback on what worked and what did not by adding comments in the~\LaTeX file or writing a note about it. This was then later discussed at a meeting and changed the sections accordingly to our notes.\\
-The blackboard in the group room was always in use for visualization for different concepts or explanations, and the board was also used to keep track of different dates and important deadlines.\\
-Prototyping was a massive part of our development phase, where we used breadboards to prototype our circuits before creating the final versions of them. 3D-modelling and printing was also used to create our enclosures for the rover.\\
+Prototyping was a massive part of our development phase, where we used breadboards to prototype our circuits before creating the final versions of them. 3D-modelling and printing was also used to create our enclosures for the rover.
+
 Testing was used to gather data in order to measure the success of the project.
 
-The following models were used during the project. We also used a sequence diagram for visualizing and understanding the code better, a 6-W diagram to break down our initial problem, flow charts to visualize parts of the report but also our thinking process.\\
+\subsection{Models}
+We also used a sequence diagram for visualizing and understanding the code better, a 6-W diagram to break down our initial problem, flow charts to visualize parts of the report but also our thinking process.
+
 We also printed many diagrams and datasheets and pinned them to our board. Many lists were also used to break down problems we wanted to tackle on a specific day, in a specific sprint.
 
 Other methods and models will be discussed in the \textit{Time and Resource Management} section, in Chapter \ref{ch:time-and-resources}.
 
 \section{Discussion and Conclusion}
 
-During the initial part of our project we attempted to use the 6W-diagram for our problem analysis. The diagram pointed us in the proper direction and helped form our scope. After narrowing the scope using the diagram we did some preliminary research to get a better idea of what we were going to deal with, which then lead to our problem definition.\\
-Our project report was written as separate chapters, after each chapter we would do peer-reviewing to ensure that our project work was at the level of what was expected by the university. Peer-reviewing helped us maintain consistency throughout the entire report and helped us keep track of what parts needed improving or modifying before the next reviewing sessions.\\
+During the initial part of our project we attempted to use the 6W-diagram for our problem analysis. The diagram pointed us in the proper direction and helped form our scope. After narrowing the scope using the diagram we did some preliminary research to get a better idea of what we were going to deal with, which then lead to our problem definition.
+
+Our project report was written as separate chapters, after each chapter we would do peer-reviewing to ensure that our project work was at the level of what was expected by the university. Peer-reviewing helped us maintain consistency throughout the entire report and helped us keep track of what parts needed improving or modifying before the next reviewing sessions.
+
 We used flow charts and sequence diagrams the visualize critical parts of our development and final product. The diagrams were used to help the reader understand the different processes, in a simpler and more visual manner. 
 
-Prototyping using 3D-printing allowed us to be flexible in terms of development, since it removed our boundaries in terms getting hold of custom made items. We were able to design and print the things best suited for our prototyping process. Breadboarding allowed us to create our circuits and do small tests during development to avoid wasting time by creating the final circuits. It helped us find potential bugs and choose the correct components.\\
+Prototyping using 3D-printing allowed us to be flexible in terms of development, since it removed our boundaries in terms getting hold of custom made items. We were able to design and print the things best suited for our prototyping process. Breadboarding allowed us to create our circuits and do small tests during development to avoid wasting time by creating the final circuits. It helped us find potential bugs and choose the correct components.
+
 We extensively tested our final prototype in different environments. The data from the testing chapter formed the starting point in our discussion chapter, were we used the information we received evaluate the testing requirements, but also the success of the whole project.
