--- a/process-analysis/sections/appendix.tex
+++ b/process-analysis/sections/appendix.tex
@@ -91,7 +91,8 @@
 	\item Must be able to generalize and reflect upon the experience with project planning and cooperation for the further study acquired during the project work
 \end{itemize}
 
-\section{Kanbanflow}
+\clearpage
+\section{Kanbanflow}\label{appendix:kanbanflow}
 
 \begin{figure}[H]
 	\centering
@@ -101,7 +102,7 @@
 \end{figure}
 
 \clearpage
-\section{Group contract}
+\section{Group contract}\label{appendix:group-contract}
 
 \begin{enumerate}
 	\item Honesty is expected from everybody.
