--- a/process-analysis/sections/appendix.tex
+++ b/process-analysis/sections/appendix.tex
@@ -102,6 +102,16 @@
 \end{figure}
 
 \clearpage
+\section{Github}\label{appendix:github}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1\linewidth]{images/github.png}
+	\caption{Screenshot from the Github wiki.}
+	\label{fig:github}
+\end{figure}
+
+\clearpage
 \section{Group contract}\label{appendix:group-contract}
 
 \begin{enumerate}
